--- a/index.html
+++ b/index.html
@@ -1,60 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <!-- meta data -->
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>Jared Boring</title>
-      <meta name="author" content="Jared Boring">
-      <meta name="description" content="Jared Boring's engineering portfolio.">
-      <link rel="shortcut icon" href="https://bugslife-2020.github.io/TurtleToSquirtle/favicon.ico" type="image/vnd.microsoft.icon">
-      <link rel="apple-touch-icon" sizes="180x180" href="https://bugslife-2020.github.io/TurtleToSquirtle/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="https://bugslife-2020.github.io/TurtleToSquirtle/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="https://bugslife-2020.github.io/TurtleToSquirtle/favicon-16x16.png">
-      <link rel="manifest" href="https://bugslife-2020.github.io/TurtleToSquirtle/site.webmanifest">
-      
-      <!-- Include CDN JavaScript -->
-      <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-   </head>
-   <body>
+  <head>
+    <!-- meta data -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Jared Boring
+    </title>
+    <meta name="author" content="Jared Boring">
+    <meta name="description" content="Jared Boring's engineering portfolio.">
+    <link rel="shortcut icon" href="https://bugslife-2020.github.io/TurtleToSquirtle/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://bugslife-2020.github.io/TurtleToSquirtle/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://bugslife-2020.github.io/TurtleToSquirtle/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://bugslife-2020.github.io/TurtleToSquirtle/favicon-16x16.png">
+    <link rel="manifest" href="https://bugslife-2020.github.io/TurtleToSquirtle/site.webmanifest">
+    <!-- Include CDN JavaScript -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  </head>
+  <body>
     <nav class="flex flex-wrap items-center justify-between p-5 bg-gradient-to-r from-blue-500 via-teal-100 to-green-500">      
-        <h2 alt="Logo" class="text-gray-50 text-3xl cursor-pointer">Jared Boring</h2>
-        <div class="flex md:hidden">
-            <button class="outline-none" id="hamburger">
-              <img class="toggle block" src="https://img.icons8.com/ios/50/000000/menu--v4.png" width="40" height="40" />
-              <img class="toggle hidden" src="https://img.icons8.com/ios/50/000000/close-window.png" width="40" height="40" />
-            </button>
+      <h2 alt="Logo" class="text-gray-50 text-3xl cursor-pointer">Jared Boring
+      </h2>
+      <div class="flex md:hidden">
+        <button class="outline-none" id="hamburger">
+          <img class="toggle block" src="https://img.icons8.com/ios/50/000000/menu--v4.png" width="40" height="40" />
+          <img class="toggle hidden" src="https://img.icons8.com/ios/50/000000/close-window.png" width="40" height="40" />
+        </button>
+      </div>
+      <div class="toggle hidden md:flex w-full md:w-auto text-right text-bold">        
+        <a href="#intro" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Introduction
+        </a>
+        <a href="#about" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">About Me
+        </a>
+        <a href="#skills" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Skills
+        </a>
+        <a href="#projects" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Projects
+        </a>
+        <a href="#contact" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Contact
+        </a>
+      </div>
+    </nav>
+    <div class="intro pt-24 bg-black" id="intro">
+      <div class="px-12 mx-auto max-w-7xl">
+        <div class="w-full mx-auto text-left md:w-11/12 xl:w-9/12 md:text-center">
+          <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
+            <span class="text-gray-50">Hello,
+            </span> 
+            <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">im Jared.
+            </span> 
+            <span class="text-gray-50">Feel free to take a look around!
+            </span>
+          </h1>
+          <p class="px-0 mb-8 text-lg text-gray-600 md:text-xl lg:px-24">
+            I have an associates degree of drafting and design with relevant experience of 7 years from within the engineering / drafting realm. 
+          </p>
+          <div class="mb-4 space-x-0 md:space-x-2 md:mb-8">
+            <a href="#projects" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-blue-500 text-blue-700 hover:text-white border border-blue-500 hover:border-transparent outline-none rounded sm:w-auto sm:mb-0">
+              My Work
+              <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd">
+                </path>
+              </svg>
+            </a>
+            <a href="#contact" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-green-500 text-green-700 hover:text-white border border-green-500 rounded hover:border-transparent outline-none sm:w-auto sm:mb-0">
+              Contact Me
+              <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z">
+                </path>
+              </svg>
+            </a>
+          </div>
         </div>
-        <div class="toggle hidden md:flex w-full md:w-auto text-right text-bold">        
-            <a href="#" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Introduction</a>
-            <a href="#" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">About Me</a>
-            <a href="#" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Skills</a>
-            <a href="#" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Projects</a>
-            <a href="#" class="block md:inline-block text-gray-50 hover:text-black px-3 py-3 border-b-2 border-blue-900 md:border-none outline-none">Contact</a>
+      </div>
+      <div class="scroll-down w-full mx-auto flex items-center justify-center">
+        <a href="#about">
+          <button class="font-mono outline-none border-white border-2 rounded-xl px-2 py-3 text-white animate-bounce">
+            V
+          </button>
+        </a>
+      </div>
+      <div class="about bg-gray-200" id="about">
+        <div class="container px-6 py-4 mx-auto lg:flex lg:h-128 lg:py-16">
+          <div class="flex flex-col items-center w-full lg:flex-row lg:w-1/2">
+            <div class="max-w-lg">
+              <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
+                <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">About Me
+                </span>
+              </h1>
+              <p class="mt-5 text-gray-300 text-lg text-gray-600">I am currently working as a full time employee at *company name*, in which my responsibilities include *list of tasks*.
+                I began my profession in 2009 and since then my skills have improved vastly.. *just add an about me paragraph really*.
+              </p>
+            </div>
+          </div>
         </div>
-        </nav>
-        <section class="pt-24 bg-black">
-          <div class="px-12 mx-auto max-w-7xl">
-              <div class="w-full mx-auto text-left md:w-11/12 xl:w-9/12 md:text-center">
-                  <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
-                      <span class="text-gray-50">Hello,</span> <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">im Jared.</span> <span class="text-gray-50">Feel free to take a look around!</span>
-                  </h1>
-                  <p class="px-0 mb-8 text-lg text-gray-600 md:text-xl lg:px-24">
-                      I have a associates degree of engineering and releavant experience of 7 years from within the engineering / drafting realm.
-                  </p>
-                  <div class="mb-4 space-x-0 md:space-x-2 md:mb-8">
-                      <a href="#_" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-blue-500 text-blue-700 hover:text-white border border-blue-500 hover:border-transparent outline-none rounded sm:w-auto sm:mb-0">
-                          My Work
-                          <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                      </a>
-                      <a href="#_" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-green-500 text-green-700 hover:text-white border border-green-500 rounded hover:border-transparent outline-none sm:w-auto sm:mb-0">
-                          Contact Me
-                          <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"></path></svg>
-                      </a>
-                  </div>
-              </div> 
-              <svg class=""></svg>
-        <script src="js/script.js"></script> 
-   </body>
+      </div> 
+      <div class="scroll-down bg-gray-200 w-full mx-auto flex items-center justify-center">
+        <a href="#skills">
+          <button class="font-mono outline-none border-black border-2 rounded-xl px-2 py-3 text-black animate-bounce">
+            V
+          </button>
+        </a>
+      </div>      
+    </div>
+    <div class="skills bg-black" id="skills">
+      <div class="container px-6 py-4 mx-auto lg:flex lg:h-128 lg:py-16 ">
+        <div class="flex flex-col items-center w-full lg:flex-row lg:w-1/2">
+          <div class="max-w-lg">
+            <h1 class="text-xl tracking-wide text-white text-gray-800 lg:text-3xl lg:text-4xl">Set your
+              Title
+            </h1>
+            <p class="mt-4 text-gray-300 text-gray-600">Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Aut quia asperiores alias vero magnam recusandae adipisci ad vitae
+              laudantium quod rem voluptatem eos accusantium cumque.
+            </p>
+            <div class="mt-6">
+              <a href="#"
+                 class="inline-block px-3 py-2 font-semibold text-center text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="flex items-center justify-center w-full mt-2 lg:h-96 lg:w-1/2">
+          <img class="object-cover w-full max-w-2xl rounded-md lg:h-full"
+               src="https://source.unsplash.com/user/erondu/1600x900" alt="apple watch photo">
+        </div>
+      </div>
+    </div>       
+    <script src="js/script.js">
+    </script> 
+  </body>
 </html>
+
+
