--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
             <span class="text-gray-50">Hello,
             </span> 
-            <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">im Jared.
+            <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">I'm Jared.
             </span> 
             <span class="text-gray-50">Feel free to take a look around!
             </span>
@@ -106,25 +106,48 @@
       <div class="container px-6 py-4 mx-auto lg:flex lg:h-128 lg:py-16 ">
         <div class="flex flex-col items-center w-full lg:flex-row lg:w-1/2">
           <div class="max-w-lg">
-            <h1 class="text-xl tracking-wide text-white text-gray-800 lg:text-3xl lg:text-4xl">Set your
-              Title
+            <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
+              <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">Skills
+              </span>
             </h1>
-            <p class="mt-4 text-gray-300 text-gray-600">Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Aut quia asperiores alias vero magnam recusandae adipisci ad vitae
-              laudantium quod rem voluptatem eos accusantium cumque.
-            </p>
-            <div class="mt-6">
-              <a href="#"
-                 class="inline-block px-3 py-2 font-semibold text-center text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400">
-                Read More
-              </a>
+            <div class="grid-flow-row">
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#AutoCAD</p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Inventor</p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Revit</p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#SolidWorks</p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#ME10</p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Siemens-NX</p>
             </div>
           </div>
         </div>
         <div class="flex items-center justify-center w-full mt-2 lg:h-96 lg:w-1/2">
-          <img class="object-cover w-full max-w-2xl rounded-md lg:h-full"
-               src="https://source.unsplash.com/user/erondu/1600x900" alt="apple watch photo">
+          <div class="container px-6 py-4 mx-auto lg:flex lg:h-128 lg:py-16 ">
+          <div class="max-w-lg">
+            <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
+              <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">Resume
+              </span>
+            </h1>
+            <p class="mt-5 text-gray-300 text-lg text-gray-600">To take a look at my resume, press the download button!
+            </p>
+            <div class="mt-6">
+              <a href="#projects" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-blue-500 text-blue-700 hover:text-white border border-blue-500 hover:border-transparent outline-none rounded sm:w-auto sm:mb-0">
+                Download
+                <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd">
+                  </path>
+                </svg>
+              </a>
+            </div>
+          </div>
+          </div>
         </div>
+      </div>
+      <div class="scroll-down w-full mx-auto flex items-center justify-center">
+        <a href="#projects">
+          <button class="font-mono outline-none border-white border-2 rounded-xl px-2 py-3 text-white animate-bounce">
+            V
+          </button>
+        </a>
       </div>
     </div>       
     <script src="js/script.js">
