--- a/index.html
+++ b/index.html
@@ -111,34 +111,40 @@
               </span>
             </h1>
             <div class="grid-flow-row">
-              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#AutoCAD</p>
-              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Inventor</p>
-              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Revit</p>
-              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#SolidWorks</p>
-              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#ME10</p>
-              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Siemens-NX</p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#AutoCAD
+              </p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Inventor
+              </p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Revit
+              </p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#SolidWorks
+              </p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#ME10
+              </p>
+              <p class="mt-5 px-6 py-3 mb-2 border rounded border-blue-500 text-gray-300 text-3xl text-green-500">#Siemens-NX
+              </p>
             </div>
           </div>
         </div>
         <div class="flex items-center justify-center w-full mt-2 lg:h-96 lg:w-1/2">
           <div class="container px-6 py-4 mx-auto lg:flex lg:h-128 lg:py-16 ">
-          <div class="max-w-lg">
-            <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
-              <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">Resume
-              </span>
-            </h1>
-            <p class="mt-5 text-gray-300 text-lg text-gray-600">To take a look at my resume, press the download button!
-            </p>
-            <div class="mt-6">
-              <a href="#projects" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-blue-500 text-blue-700 hover:text-white border border-blue-500 hover:border-transparent outline-none rounded sm:w-auto sm:mb-0">
-                Download
-                <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd">
-                  </path>
-                </svg>
-              </a>
+            <div class="max-w-lg">
+              <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
+                <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">Resume
+                </span>
+              </h1>
+              <p class="mt-5 text-gray-300 text-lg text-gray-600">To take a look at my resume, press the download button!
+              </p>
+              <div class="mt-6">
+                <a href="#projects" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-blue-500 text-blue-700 hover:text-white border border-blue-500 hover:border-transparent outline-none rounded sm:w-auto sm:mb-0">
+                  Download
+                  <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd">
+                    </path>
+                  </svg>
+                </a>
+              </div>
             </div>
-          </div>
           </div>
         </div>
       </div>
@@ -149,10 +155,34 @@
           </button>
         </a>
       </div>
+      <div class="projects bg-gray-200" id="projects">
+        <div class="container px-6 py-4 mx-auto lg:flex lg:h-128 lg:py-16">
+          <div class="max-w-lg">
+            <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
+              <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">Project Showcase
+              </span>
+            </h1>
+          </div>
+          <div class="flex flex-col items-center w-full lg:flex-row lg:w-1/2">
+          </div>
+          <div class="container mx-auto space-y-2 lg:space-y-0 lg:gap-2 lg:grid lg:grid-cols-3">
+            <div class="w-full rounded hover:shadow-2xl">
+              <img src="https://bugslife-2020.github.io/Fathers-Portfolio/img/building1.png"
+                   alt="building1">
+            </div>
+            <div class="w-full rrounded hover:shadow-2xl">
+              <img src="https://bugslife-2020.github.io/Fathers-Portfolio/img/building2.jpg"
+                   alt="building2">
+            </div>
+            <div class="w-full rounded hover:shadow-2xl">
+              <img src="https://bugslife-2020.github.io/Fathers-Portfolio/img/engineeringSheet.png"
+                   alt="engineeringSheet">
+            </div>
+          </div>
+        </div>
+      </div> 
     </div>       
     <script src="js/script.js">
     </script> 
   </body>
 </html>
-
-
