--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <p class="mt-5 text-gray-300 text-lg text-gray-600">To take a look at my resume, press the download button!
               </p>
               <div class="mt-6">
-                <a href="#projects" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-blue-500 text-blue-700 hover:text-white border border-blue-500 hover:border-transparent outline-none rounded sm:w-auto sm:mb-0">
+                <a href="https://bugslife-2020.github.io/Fathers-Portfolio/documents/resume.pdf" class="inline-flex items-center justify-center w-full px-6 py-3 mb-2 text-lg bg-transparent hover:bg-blue-500 text-blue-700 hover:text-white border border-blue-500 hover:border-transparent outline-none rounded sm:w-auto sm:mb-0" download>
                   Download
                   <svg class="w-4 h-4 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd">
