added contact section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </span>
               </h1>
               <p class="mt-5 text-gray-300 text-lg text-gray-600">I am currently working as a full time employee at *company name*, in which my responsibilities include *list of tasks*.
-                I began my profession in 2009 and since then my skills have improved vastly.. *just add an about me paragraph really*.
+                I began in 2009 and since then my skills have improved by.. *just add an about me paragraph really*.
               </p>
             </div>
           </div>
@@ -181,8 +181,30 @@
           </div>
         </div>
       </div> 
+    </div> 
+    <div class="scroll-down w-full mx-auto flex items-center justify-center">
+      <a href="#contact">
+        <button class="font-mono outline-none border-black border-2 rounded-xl px-2 py-3 text-black animate-bounce">
+          V
+        </button>
+      </a>
+    </div>
+    <div class="contact bg-black" id="contact">
+      <div class="container px-6 py-4 mx-auto lg:flex lg:h-128 lg:py-16">
+        <div class="flex flex-col items-center w-full lg:flex-row lg:w-1/2">
+          <div class="max-w-lg">
+            <h1 class="mb-8 text-4xl font-extrabold leading-none tracking-normal text-gray-900 md:text-6xl md:tracking-tight">
+              <span class="block w-full py-2 text-transparent bg-clip-text leading-12 bg-gradient-to-r from-green-400 to-purple-500 lg:inline">Contact Me
+              </span>
+            </h1>
+            <p class="mt-5 text-gray-300 text-lg text-gray-600">Add contact info
+            </p>
+          </div>
+        </div>
+      </div>
     </div>       
     <script src="js/script.js">
     </script> 
   </body>
 </html>
+
